Changed how spiral is tested

--- a/plot.ipynb
+++ b/plot.ipynb
@@ -34,6 +34,13 @@
     "\n",
     "}\n",
     "\n",
+    "spiral_dict ={\n",
+    "    Metric.max_payload_size_B : (lambda data: data['Item size (B)']),\n",
+    "    Metric.server_runtime_ms : (lambda data: data['total_us']/1000),\n",
+    "    Metric.query_size_B : (lambda data: (data['param_sz'] + data['query_sz'])),\n",
+    "    Metric.response_size_B : (lambda data: data['resp_sz']),\n",
+    "}\n",
+    "\n",
     "functions = {\n",
     "    'RLWE_All_Keys' : rlwe_dict,\n",
     "    'RLWE_Whispir_3_Keys' : rlwe_dict,\n",
@@ -56,30 +63,10 @@
     "        Metric.query_size_B : (lambda data: (data['Gal Keys (KB)'] + data['Encrypted Secret Key (KB)'] + data['Query size (KB)']) * 1024),\n",
     "        Metric.response_size_B : (lambda data: data['Reply size (KB)'] * 1024),\n",
     "    },\n",
-    "    'spiral' : {\n",
-    "        Metric.max_payload_size_B : (lambda data: data['size (B)']),\n",
-    "        Metric.server_runtime_ms : (lambda data: (data['Database-independent computation Total (us)'] + data['Database-dependent computation Total (us)'])/1000),\n",
-    "        Metric.query_size_B : (lambda data: (data['Total offline query size (B)'] + data['Total online query size (B)'])),\n",
-    "        Metric.response_size_B : (lambda data: data['Response size (B)']),\n",
-    "    },\n",
-    "    'spiral-pack' : {\n",
-    "        Metric.max_payload_size_B : (lambda data: data['size (B)']),\n",
-    "        Metric.server_runtime_ms : (lambda data: (data['Database-independent computation Total (us)'] + data['Database-dependent computation Total (us)'])/1000),\n",
-    "        Metric.query_size_B : (lambda data: (data['Total offline query size (B)'] + data['Total online query size (B)'])),\n",
-    "        Metric.response_size_B : (lambda data: data['Response size (B)']),\n",
-    "    },\n",
-    "    'spiral-stream' : {\n",
-    "        Metric.max_payload_size_B : (lambda data: data['size (B)']),\n",
-    "        Metric.server_runtime_ms : (lambda data: (data['Database-independent computation Total (us)'] + data['Database-dependent computation Total (us)'])/1000),\n",
-    "        Metric.query_size_B : (lambda data: (data['Total offline query size (B)'] + data['Total online query size (B)'])),\n",
-    "        Metric.response_size_B : (lambda data: data['Response size (B)']),        \n",
-    "    },\n",
-    "    'spiral-stream-pack' : {\n",
-    "        Metric.max_payload_size_B : (lambda data: data['Item size (B)']),\n",
-    "        Metric.server_runtime_ms : (lambda data: (data['Database-independent computation Total (us)'] + data['Database-dependent computation Total (us)'])/1000),\n",
-    "        Metric.query_size_B : (lambda data: (data['Total offline query size (B)'] + data['Total online query size (B)'])),\n",
-    "        Metric.response_size_B : (lambda data: data['Response size (B)']),        \n",
-    "    },\n",
+    "    'spiral' : spiral_dict,\n",
+    "    'spiral-pack' : spiral_dict,\n",
+    "    'spiral-stream' : spiral_dict,\n",
+    "    'spiral-stream-pack' : spiral_dict,\n",
     "}\n",
     "\n",
     "run_command_no_output([\"mkdir\", \"-p\", 'results'])\n",
@@ -88,7 +75,7 @@
     "for name in functions.keys():\n",
     "    with open(f\"results/{name}.csv\", \"w\") as f:\n",
     "        f.write(\"num_rows, target_payload_size_B, runtime_s, communication_KB\\n\")\n",
-    "    for log_num_rows in [11, 12, 13, 14, 15, 16, 17, 18, 19, 20]:\n",
+    "    for log_num_rows in [10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]:\n",
     "        num_rows = 2**log_num_rows\n",
     "        path_to_file = f\"logs/logs-{num_rows}-0/{name}.json\"\n",
     "        if os.path.exists(path_to_file):\n",
@@ -121,13 +108,6 @@
     "                    f.write(f\"{num_rows}, {TARGET_PAYLOAD_SIZE_B}, {runtime_s}, {communication_KB}\\n\")\n",
     "            "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
