Multirun Bitswap experiments

--- a/plot.ipynb
+++ b/plot.ipynb
@@ -77,8 +77,16 @@
     "        f.write(\"num_rows, target_payload_size_B, runtime_s, communication_KB\\n\")\n",
     "    for log_num_rows in [10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]:\n",
     "        num_rows = 2**log_num_rows\n",
-    "        path_to_file = f\"logs/logs-{num_rows}-0/{name}.json\"\n",
-    "        if os.path.exists(path_to_file):\n",
+    "        directory_to_logs = f\"logs/logs-{num_rows}-0/{name}\"\n",
+    "        # path_to_file = f\"logs/logs-{num_rows}-0/{name}.json\"\n",
+    "        all_files = os.listdir(directory_to_logs)\n",
+    "        # Filter to include only .json files\n",
+    "        json_files = [file for file in all_files if file.endswith('.json')]\n",
+    "\n",
+    "        # Iterate over each json file\n",
+    "        for json_file in json_files:\n",
+    "        # if os.path.exists(path_to_file):\n",
+    "            path_to_file = os.path.join(directory_to_logs, json_file)\n",
     "            with open(path_to_file) as f:\n",
     "                data = json.load(f)\n",
     "                funcs = functions[name]\n",
