Bug fix for multirun. Ready.

--- a/plot.ipynb
+++ b/plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +43,8 @@
     "\n",
     "functions = {\n",
     "    'RLWE_All_Keys' : rlwe_dict,\n",
-    "    'RLWE_Whispir_3_Keys' : rlwe_dict,\n",
-    "    'RLWE_Whispir_2_Keys' : rlwe_dict,\n",
+    "    # 'RLWE_Whispir_3_Keys' : rlwe_dict,\n",
+    "    # 'RLWE_Whispir_2_Keys' : rlwe_dict,\n",
     "    'sealpir' : { \n",
     "        Metric.max_payload_size_B : (lambda data: data['max_element_size']),\n",
     "        Metric.server_runtime_ms : (lambda data: data['PIRServer_reply_generation_time']),\n",
@@ -74,14 +74,17 @@
     "TARGET_PAYLOAD_SIZE_B = 256*1024\n",
     "for name in functions.keys():\n",
     "    with open(f\"results/{name}.csv\", \"w\") as f:\n",
-    "        f.write(\"num_rows, target_payload_size_B, runtime_s, communication_KB\\n\")\n",
-    "    for log_num_rows in [10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]:\n",
+    "        f.write(\"num_rows, target_payload_size_B, runtime_s_mean, runtime_std, communication_KB\\n\")\n",
+    "    for log_num_rows in [10, 11]:\n",
     "        num_rows = 2**log_num_rows\n",
     "        directory_to_logs = f\"logs/logs-{num_rows}-0/{name}\"\n",
     "        # path_to_file = f\"logs/logs-{num_rows}-0/{name}.json\"\n",
     "        all_files = os.listdir(directory_to_logs)\n",
     "        # Filter to include only .json files\n",
     "        json_files = [file for file in all_files if file.endswith('.json')]\n",
+    "\n",
+    "        runtime_list = []\n",
+    "        communication_list = []\n",
     "\n",
     "        # Iterate over each json file\n",
     "        for json_file in json_files:\n",
@@ -97,23 +100,33 @@
     "                # runtime\n",
     "                try:\n",
     "                    runtime_s = (funcs[Metric.server_runtime_ms](data) * SCALAR) / 1000\n",
+    "                    runtime_list.append(runtime_s)\n",
     "                except Exception as e:\n",
-    "                    runtime_s = None\n",
+    "                    pass\n",
+    "                    # runtime_s = None\n",
     "                \n",
     "                try:\n",
     "                    communication_KB = (funcs[Metric.query_size_B](data) + funcs[Metric.response_size_B](data) * SCALAR) / (1024)\n",
+    "                    communication_list.append(communication_KB)\n",
     "                except Exception as e:\n",
+    "                    pass\n",
     "                    communication_KB = None\n",
     "\n",
-    "                # print(f\"{name} {num_rows} ({runtime_s} s) ({communication_KB} KB)\")\n",
-    "                with open(f\"results/{name}.csv\", \"a\") as f:\n",
-    "                    if TARGET_PAYLOAD_SIZE_B is None:\n",
-    "                        TARGET_PAYLOAD_SIZE_B = \" \"\n",
-    "                    if runtime_s is None:\n",
-    "                        runtime_s = \" \"\n",
-    "                    if communication_KB is None:\n",
-    "                        communication_KB = \" \"\n",
-    "                    f.write(f\"{num_rows}, {TARGET_PAYLOAD_SIZE_B}, {runtime_s}, {communication_KB}\\n\")\n",
+    "        # print(f\"{name} {num_rows} ({runtime_s} s) ({communication_KB} KB)\")\n",
+    "        with open(f\"results/{name}.csv\", \"a\") as f:\n",
+    "            if TARGET_PAYLOAD_SIZE_B is None:\n",
+    "                TARGET_PAYLOAD_SIZE_B = \" \"\n",
+    "            if len(runtime_list) == 0:\n",
+    "                runtime_s_mean = \" \"\n",
+    "                runtime_s_std = \" \"\n",
+    "            else:\n",
+    "                runtime_s_mean = sum(runtime_list) / len(runtime_list)\n",
+    "                runtime_s_std = sum([(x - runtime_s_mean)**2 for x in runtime_list]) / len(runtime_list)\n",
+    "            if len(communication_list) == 0:\n",
+    "                communication_KB_mean = \" \"\n",
+    "            else:\n",
+    "                communication_KB_mean = sum(communication_list) / len(communication_list)\n",
+    "            f.write(f\"{num_rows}, {TARGET_PAYLOAD_SIZE_B}, {runtime_s_mean}, {runtime_s_std}, {communication_KB_mean}\\n\")\n",
     "            "
    ]
   }
